--- a/src/app/fcomponents/userInfo/userInfo.component.html
+++ b/src/app/fcomponents/userInfo/userInfo.component.html
@@ -14,7 +14,7 @@
                <div class="invalid_feedback" *ngIf=" FirstName.errors?.minlength && FirstName.touched ">
                   Your first name shall be at least 2 characters
                </div>
-               <input class="form-control" type="FirstName" required minlength="2" name="FirstName" placeholder="Enter your first name"
+               <input class="form-control s2" type="FirstName" required minlength="2" name="FirstName" placeholder="Enter your first name"
                   [ngClass]="{'is-invalid':FirstName.errors?.required && FirstName.touched}" [(ngModel)]="userInfo.FirstName"
                   #FirstName="ngModel">
             </div>
@@ -26,7 +26,7 @@
             <div class="invalid_feedback" *ngIf=" LastName.errors?.minlength && LastName.touched ">
                Your last shall be at least 2 characters
             </div>
-            <input class="form-control" type="LastName" required minlength="2" name="LastName" placeholder="Enter your last name"
+            <input class="form-control s2" type="LastName" required minlength="2" name="LastName" placeholder="Enter your last name"
                [ngClass]="{'is-invalid':LastName.errors?.required && LastName.touched}" [(ngModel)]="userInfo.LastName"
                #LastName="ngModel">
          </div>
@@ -34,7 +34,7 @@
          <div class="form-group ">
             <div class="invalid_feedback" *ngIf="Email.errors?.required && Email.touched">Please input your E-mail</div>
             <div class="invalid_feedback" *ngIf="Email.errors?.pattern && Email.touched">Incorrect Email entered</div>
-            <input class="form-control" type="Email" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$"
+            <input class="form-control s2" type="Email" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$"
                minlength="6" name="Email" placeholder="Enter your email" [ngClass]="{'is-invalid':Email.errors?.required && Email.touched}"
                [(ngModel)]="userInfo.Email" #Email="ngModel">
          </div>
@@ -45,12 +45,12 @@
             <div class="invalid_feedback" *ngIf="PhoneNum.errors?.pattern && PhoneNum.touched">
                Please enter the correct phone number.
             </div>
-            <input class="form-control" type="tel" required pattern="[0-9]{7,15}" minlength="7" name="PhoneNum"
+            <input class="form-control s2" type="tel" required pattern="[0-9]{7,15}" minlength="7" name="PhoneNum"
                placeholder="Enter your phone number" [ngClass]="{'is-invalid':PhoneNum.errors?.required && PhoneNum.touched}"
                [(ngModel)]="userInfo.PhoneNum" #PhoneNum="ngModel">
          </div>
          <!-- company -->
-         <div class="form-group "><input class="form-control" type="text" placeholder="Company" [(ngModel)]="userInfo.company"
+         <div class="form-group "><input class="form-control s2" type="text" placeholder="Company" [(ngModel)]="userInfo.company"
                name="company"></div>
          <!-- city -->
          <div class="form-group ">
@@ -58,7 +58,7 @@
             <div class="invalid_feedback" *ngIf=" city.errors?.minlength && city.touched ">
                Please enter the corrct city.
             </div>
-            <input class="form-control" type="city" required minlength="2" name="city" placeholder="Event city" [ngClass]="{'is-invalid':city.errors?.required && city.touched}"
+            <input class="form-control s2" type="city" required minlength="2" name="city" placeholder="Event city" [ngClass]="{'is-invalid':city.errors?.required && city.touched}"
                [(ngModel)]="userInfo.city" #city="ngModel">
          </div>
          <!-- street address -->
@@ -68,7 +68,7 @@
             <div class="invalid_feedback" *ngIf=" streetAddress.errors?.minlength && streetAddress.touched ">
                Please enter the corrct address.
             </div>
-            <input class="form-control" type="streetAddress" required minlength="2" name="streetAddress" placeholder="Event street address"
+            <input class="form-control s2" type="streetAddress" required minlength="2" name="streetAddress" placeholder="Event street address"
                [ngClass]="{'is-invalid':streetAddress.errors?.required && streetAddress.touched}" [(ngModel)]="userInfo.streetAddress"
                #streetAddress="ngModel">
          </div>
@@ -83,7 +83,7 @@
             </mat-form-field>
          <!-- Message -->
          <div class="form-group">
-            <textarea class="form-control" rows="5" type="Message" name="Message" placeholder="Send a message:"
+            <textarea class="form-control s2" rows="5" type="Message" name="Message" placeholder="Send a message:"
                [(ngModel)]="userInfo.Message" #Message="ngModel">
                       </textarea>
          </div>
