--- a/src/app/fcomponents/products/product/product.component.html
+++ b/src/app/fcomponents/products/product/product.component.html
@@ -29,7 +29,7 @@
   <div class="col-12 col-md-6 col-lg-7 ">
     <!-- TODO: add img scrolling -->
     <div id="carouselExampleControls" class="carousel slide carousel-fade" data-ride="carousel" *ngIf="prodMediaUrl">
-        <ol class="carousel-indicators">
+        <ol class="carousel-indicators" *ngIf="prodMediaUrl > 1">
             <li data-target="#carouselExampleControls" data-slide-to="i" class="active" *ngFor="let img of prodMediaUrl, index as i" [ngClass]="{'active': i == 0}"></li>
           </ol>
         <div class="carousel-inner">
@@ -64,7 +64,7 @@
               <input class="s2" style="background-color:white; border-width: 0px; width:144px;" type="text" formControlName="Title" disabled>
               $<input class="s2" style="background-color:white; border-width: 0px; width:49px;" type="text" formControlName="Price" disabled>
               <input class="s2" style="width:50px; height:22px;" type="number" min="0" formControlName="Quantity" placeholder="Quantity">
-              <div *ngIf="cartForm.controls.cartItems.controls[i].controls.Quantity.invalid" class="indicator" >No more stock</div>
+              <div *ngIf="cartForm.controls.cartItems.controls[i].controls.Quantity.invalid" class="alert alert-danger" role="alert" >Only {{detail.value.AvailableStock}} left in stock. Please enter the correct quantity.</div>
             </div>
           </div>
         </div>
@@ -77,15 +77,17 @@
         <!-- <span class="s3 pl-2"> (only {{productDetail.availableStock}} in stock)</span> -->
       </div>
       <div class="col-6 col-lg-6">
-        <button class='btn btn_gold' (click)="manageCartProds()" [disabled] = " 0>= quantity && (cartForm.invalid || isInputZero)">Add to cart</button>
+        <button class='btn btn_gold' (click)="manageCartProds()" [disabled] = " (0>= quantity || quantity > productDetail.availableStock) && (cartForm.invalid || isInputZero)">Add to cart</button>
       </div>
     </div>
 
     <div class="row justify-content-end">
-      <!-- <div class="col-6 col-lg-4 alert alert-danger mt-3" role="alert" *ngIf="!isStockAvailable" >No more stock</div> -->
+      <!-- <div class="col-6 col-lg-4 alert alert-danger mt-3" role="alert" *ngIf="!isStockAvailable" >Only {{productDetail.availableStock}} left in stock.</div> -->
       <div class="col-6 col-lg-4 alert alert-success mt-3" role="alert" *ngIf="isprodAdded && isStockAvailable">
           Added into cart.
       </div>
+       <!-- if quantity larger than available stock, then alert -->
+      <div class="col-12 alert alert-danger mt-3" role="alert" *ngIf="quantity > productDetail.availableStock" >Only {{productDetail.availableStock}} left in stock. Please enter the correct quantity.</div>
     </div>
 
    </div>
