--- a/src/styles.css
+++ b/src/styles.css
@@ -86,12 +86,22 @@ body{
   letter-spacing: 3px;
 }
 
-.m1 {
-  font-family: 'Source Serif Pro', serif;
-  font-size: 27px;
+.l3 {
+  font-family: 'RobotoThin', serif;
+  font-size: 28px;
   color: #525252;
-  font-weight: 700;
+  font-weight: 400;
   /* font-style: italic; */
+  letter-spacing: -0.5px;
+}
+
+.m1 {
+  font-family: 'RobotoThin', serif;
+  font-size: 22px;
+  color: #525252;
+  font-weight: 400;
+  /* font-style: italic; */
+  letter-spacing: -0.5px;
 }
 
 .m2 {
@@ -105,6 +115,7 @@ body{
 .s1 {
   font-family: 'RobotoThin', serif;
   font-size: 20px;
+  font-weight: 400;
   color: #535353;
 }
 
@@ -132,6 +143,7 @@ body{
 .s2 {
   font-family: 'RobotoThin', serif;
   font-size: 17px;
+  font-weight: 450;
   color: #535353;
 }
 
