--- a/src/app/fcomponents/products/product/product.component.html
+++ b/src/app/fcomponents/products/product/product.component.html
@@ -64,7 +64,7 @@
               <input style="background-color:white; border-width: 0px; width:144px;" type="text" formControlName="Title" disabled>
               $<input style="background-color:white; border-width: 0px; width:49px;" type="text" formControlName="Price" disabled>
               <input style="width:50px; height:22px;" type="number" min="0" formControlName="Quantity" placeholder="Quantity">
-              <div *ngIf="cartForm.controls.cartItems.controls[i].controls.Quantity.invalid" class="alert alert-danger" role="alert" >Only {{detail.value.AvailableStock}} left in stock. Please enter the correct quantity.</div>
+              <div *ngIf="cartForm.controls.cartItems.controls[i].controls.Quantity.invalid" class="invalid_feedback" style="padding-bottom:10px;" role="alert" >Only {{detail.value.AvailableStock}} are available. Please contact us if you need more!</div>
             </div>
           </div>
         </div>
@@ -87,7 +87,7 @@
           Added into cart.
       </div>
        <!-- if quantity larger than available stock, then alert -->
-      <div class="col-12 alert alert-danger mt-3" role="alert" *ngIf="quantity > productDetail.availableStock" >Only {{productDetail.availableStock}} left in stock. Please enter the correct quantity.</div>
+      <div class="col-12 invalid_feedback mt-3" role="alert" *ngIf="quantity > productDetail.availableStock" >Only {{productDetail.availableStock}} are available. Please contact us if you need more!</div>
     </div>
 
    </div>
