--- a/src/app/fcomponents/userInfo/userInfo.component.html
+++ b/src/app/fcomponents/userInfo/userInfo.component.html
@@ -88,7 +88,7 @@
                       </textarea>
          </div>
 
-      <div>{{feedback_message}}</div>
+      <div class="invalid_feedback mb-4">{{feedback_message}}</div>
       <div class="row">
          <div class="col-12 text-center"><button class="btn btn-outline-gold btn-block" type="submit" [disabled]="isSendingEmail || isCartEmpty">Submit</button></div>
       </div>
