--- a/src/app/fcomponents/pages/homepage/homepage.component.html
+++ b/src/app/fcomponents/pages/homepage/homepage.component.html
@@ -32,7 +32,7 @@
   </div>
 
   <div class="px-0 px-md-5 mx-2">
-    <!-- !SecialProducts -->
+    <!-- SpecialProducts -->
     <div class="hireCollection" *ngIf="specialProducts">
       <h1 class="text-center my-5 l2 lspace-3">Event Hire Specials</h1>
       <!--Carousel Area of Special Products-->
