--- a/src/app/fcomponents/AdminDialogs/productDialog/productDialog.component.html
+++ b/src/app/fcomponents/AdminDialogs/productDialog/productDialog.component.html
@@ -41,7 +41,7 @@
         </select>
     </div>
     <!-- choose special order displayed on homepage-->
-    <div class="col-12">Display order (Please enter 1 ~ 100, 1 will be displayed firstly):</div>
+    <div class="col-12">Display order (display from num 1 to 100):</div>
     <div class="form-group col-12">
         <input class="form-control" type="number" name="specialOrder" placeholder="special order" [(ngModel)]="productForm.specialOrder" #specialOrder="ngModel">
     </div>            
