--- a/src/app/fcomponents/gallery/gallery.component.html
+++ b/src/app/fcomponents/gallery/gallery.component.html
@@ -1,6 +1,6 @@
 <br>
 <div style="text-align: center" class="container l1">
-    {{gallery}}
+    {{galleryName}}
 </div>
 <br><br>
  <!-- Show gallery list -->
@@ -14,7 +14,6 @@
                     </div>
                 </div>
             </div>
-    
             <div>{{item.description}}</div>
         </div>
     </div>
