--- a/src/app/fcomponents/gallery-list/gallery-list.component.html
+++ b/src/app/fcomponents/gallery-list/gallery-list.component.html
@@ -8,25 +8,31 @@
     <!-- Gallery List -->
     <div class="row j1">
       <div class="col-12 col-md-6 pb-30">
-        <a routerLink="/galleries/Weddings">
+        <!-- Weddings -->
+        <a [routerLink]="['/galleries/', 1]">
           <div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/gallery2.jpg');">Weddings</div>
         </a></div>
-      <div class="col-12 col-md-6 pb-30"><a style="color:white " routerLink="/galleries/Birthday">
+        <!-- Birthday -->
+      <div class="col-12 col-md-6 pb-30"><a style="color:white " [routerLink]="['/galleries/', 2]">
           <div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/gallery1.jpg');">Birthday
             Party</div>
         </a></div>
-      <div class="col-12 col-md-6 pb-30"><a routerLink="/galleries/Girls Night">
+        <!-- Girls Night -->
+      <div class="col-12 col-md-6 pb-30"><a [routerLink]="['/galleries/', 3]">
           <div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/gallery3.jpg');">Girls Night</div>
         </a></div>
-      <div class="col-12 col-md-6 pb-30"><a routerLink="/galleries/Corporate Event">
+        <!-- Corporate Event -->
+      <div class="col-12 col-md-6 pb-30"><a [routerLink]="['/galleries/', 4]">
           <div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/gallery4.jpg');">Corporate
             Event</div>
         </a></div>
-      <div class="col-12 col-md-6 pb-30"><a routerLink="/galleries/Baby Shower">
+        <!-- Baby Shower -->
+      <div class="col-12 col-md-6 pb-30"><a [routerLink]="['/galleries/', 5]">
           <div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/babyshower.jpg');">Baby
             Shower</div>
         </a></div>
-      <div class="col-12 col-md-6 pb-30"><a routerLink="/galleries/Luxe Dream Floral Studio">
+      <!-- Floral Studio -->
+      <div class="col-12 col-md-6 pb-30"><a [routerLink]="['/galleries/', 6]">
           <div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/flower.jpg');">Floral Studio</div>
         </a></div>
 
