--- a/src/app/fcomponents/pages/contactUs/contactUs.component.html
+++ b/src/app/fcomponents/pages/contactUs/contactUs.component.html
@@ -10,18 +10,18 @@
     <div class="col-12 col-md-4">
       <div class="l2 pb-3">Get Social</div>
       <div class="row" id="socialIcons">
-        <div class="col-3"><a href="https://www.facebook.com/Luxedreameventhire/" target="_blank"><i class="fab fa-facebook-square p-2 rounded"></i></a></div>
+        <div class="col-3"><a href="https://www.facebook.com/Luxedream-event-hire-258174978466574/" target="_blank"><i class="fab fa-facebook-square p-2 rounded"></i></a></div>
         <div class="col-3"><a href="https://www.instagram.com/luxedreameventhire/" target="_blank"><i class="fab fa-instagram p-2 rounded"></i></a></div>
       </div>
       <div class="l2 mt-5 pb-3">Contact Info</div>
       <div class="row py-2"> 
         <div class="col-12 s2">
-          <img src="../../../../assets/images/locationIcon.jpg" alt="" style="height:26px;width:26px;">&nbsp;&nbsp;&nbsp;&nbsp;19 Hillside Rd, Wairau Valley, Auckland 0627
+          <img src="../../../../assets/images/locationIcon.jpg" alt="" style="height:26px;width:26px;">&nbsp;&nbsp;&nbsp;&nbsp; 21 Ashwood Ave, Dairy Flat, Auckland 0792
         </div>
       </div>
       <div class="row py-2">
         <div class="col-12 s2">
-          <img src="../../../../assets/images/phoneIcon.png" alt="" style="height:26px;width:26px;">&nbsp;&nbsp;&nbsp;&nbsp;(64)2108547654
+          <img src="../../../../assets/images/phoneIcon.png" alt="" style="height:26px;width:26px;">&nbsp;&nbsp;&nbsp;&nbsp;(64) 2108793899
         </div>
       </div>
       <div class="row py-2">
