--- a/src/app/fcomponents/shopping-checkout/shopping-checkout.component.html
+++ b/src/app/fcomponents/shopping-checkout/shopping-checkout.component.html
@@ -1,11 +1,33 @@
 <div class="container">
-  <div  class="nav2 row m1">
-    <div  class="col-lg-8 col-md-9 col-9">Shopping Bag</div>
-    <div  class="col-lg-4 col-md-3 col-3">Contact</div>
+  <div class="nav2 row m1">
+    <div style="text-align: left;" class="col-lg-8 col-md-9 col-9">Your Quote Enquiry</div>
+    <div style="text-align: left;" class="col-lg-4 col-md-3 col-3">Contact</div>
   </div>
   <hr>
   <div class="row">
     <div class="col-lg-8 col-12">
+      <!-- Disclaimer Content -->
+      <div class="s3">
+        <b>If you would like to proceed with making a booking for this quote, please submit it to us below.</b>
+        <br>
+        Upon receipt of your booking enquiry, we will determine the availability of your selected items for your chosen date, 
+        and contact you to confirm. To secure your booking, a 50% deposit is payable within 3 days of your acceptance. 
+        Final payment is due before you pick up/delivery day.
+        <br><br>
+        A bond is payable on all hire items, starting at $100, calculated depending on the value of items hired. 
+        Bonds are fully refundable on return of items in original condition minus fair wear and tear.
+        <br><br>
+        The standard hire period on all items is 3 days.  
+        <br>
+        <b>No minimum spending is required if you hire on weekends (you must return products by Monday).  </b><br>
+        The minimum spending is $50 if you hire between Monday and Friday. Hire pickup time: every Friday 10:00-2:00.
+        Time to return the products: 10:00-2:00 on Monday. Please let us know if you wish to pick up outside of those times.
+        <br>
+        Please note: Prices listed on the website include GST.
+      </div>
+      <br><br><br>
+      <div style="text-align: left;" class="m1">Shopping Bag</div>
+      <hr>
       <app-shopping_cart></app-shopping_cart>
     </div>
     <div class="col-lg-4 col-12">
