--- a/src/styles.css
+++ b/src/styles.css
@@ -168,8 +168,8 @@ body{
 }
 
 .s3 {
-  font-family: 'Source Serif Pro', serif;
-  font-size: 12px;
+  font-family: 'RobotoThin', serif;
+  font-size: 14px;
   color: #535353;
 }
 
