--- a/src/app/fcomponents/pages/homepage/homepage.component.html
+++ b/src/app/fcomponents/pages/homepage/homepage.component.html
@@ -6,6 +6,7 @@
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
         </ol>
         <!-- <div class="carousel-inner"> -->
         <div class="carousel-inner">
@@ -17,6 +18,9 @@
           </div>
           <div class="carousel-item homaimg">
             <img src="../../../../assets/images/homep3.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item homaimg">
+            <img src="../../../../assets/images/homep4.jpg" class="d-block w-100" alt="...">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
