--- a/src/app/fcomponents/shopping_cart/shopping_cart.component.css
+++ b/src/app/fcomponents/shopping_cart/shopping_cart.component.css
@@ -69,3 +69,12 @@ a:hover {
   }
 }
 
+.quantityInput {
+  width:50px;
+  margin-left:15px;
+}
+
+/* input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+} */
