--- a/src/app/fcomponents/AdminDialogs/CartDialog/CartDialog.component.html
+++ b/src/app/fcomponents/AdminDialogs/CartDialog/CartDialog.component.html
@@ -20,7 +20,7 @@
       </div>
       <div class="col-12">Customer Message</div>
       <div class="form-group col-12">
-         <textarea rows="4" cols="50" class="form-control" name="phoneNum" [(ngModel)]="contactForm.phoneNum" #phoneNum="ngModel" style="white-space: pre-line"></textarea>
+         <textarea rows="4" cols="50" class="form-control" name="phoneNum" [(ngModel)]="contactForm.message" #phoneNum="ngModel" style="white-space: pre-line"></textarea>
       </div>
       <button (click)="updateContact()" [disabled] = "isLoading==true">Save changes to customer</button>
    </div>
