--- a/src/app/fcomponents/admin/admin.component.html
+++ b/src/app/fcomponents/admin/admin.component.html
@@ -124,7 +124,7 @@
               <th scope="col">Title<br><span>标题</span></th>
               <th scope="col">Subtitle<br><span>副标题</span></th>
               <th scope="col" >Price<br><span>价格</span></th>
-              <th scope="col" >Discount<br><span>折扣</span></th>
+              <th scope="col" >Discount<br><span>折后价</span></th>
               <th scope="col" *ngIf="blockCode == 2" >Category<br><span>类别</span></th>
               <th scope="col" >Total stock<br><span>总库存</span></th>
               <th scope="col" >Available stock<br><span>现库存</span></th>
