--- a/src/app/fcomponents/products/productList/productList.component.html
+++ b/src/app/fcomponents/products/productList/productList.component.html
@@ -46,11 +46,14 @@
 
       <h1 style="margin:0px; line-height: 24px; margin-block-start:0px;"><a [routerLink] = "['/product/',product.prodId]" class="m1">{{product.title}}</a></h1>
       <div class="row">
-        <div class="col-4" *ngIf="product.discount && product.discount>0">
-          <span class="s2 mr-3">Price: ${{product.price - product.discount}}</span>
+        <div class="col-12">
+          <span class="s2 mr-3" *ngIf="product.productDetail.length==0 && product.discount == null">Price: ${{product.price}}</span>
+          <span class="s2 mr-3" *ngIf="product.productDetail.length==0 && product.discount >= 0">Price: ${{product.price - product.discount}}</span>
+          <span class="s2 mr-3" *ngIf="product.productDetail.length>0 && product.discount == null" >Starting from: $ {{product.price}}</span>
+          <span class="s2 mr-3" *ngIf="product.productDetail.length>0 && product.discount >= 0" >Starting from: $ {{product.price - product.discount}}</span>
           <!-- <s>${{product.price}}</s> -->
         </div>
-        <div class="s2 col-4" *ngIf="!product.discount || product.discount == 0">Price: ${{product.price}}</div>
+        <!-- <div class="s2 col-4" *ngIf="!product.discount || product.discount == 0">Price: ${{product.price}}</div> -->
       </div>
     </div>
   </div>
